node-app/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mern-stack
      http:
        paths:
          - path: /mongodb
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port: 
                  number: 8081
          - path: /
            pathType: Prefix
            backend:  
              service:  
                name: nodejs-service
                port: 
                  number: 3000
